refactor: create tailwind components

--- a/src/pages/clubs.astro
+++ b/src/pages/clubs.astro
@@ -12,7 +12,7 @@ import Layout from "@/layout/default.astro";
     amet ut!
   </Hero>
 
-  <h2 class="mb-8 text-3xl font-black text-gray-900">Schweiz</h2>
+  <h2 class="h2 mb-8 font-black">Schweiz</h2>
   <div class="grid grid-cols-4 gap-8">
     <Card
       title="Lions Club Basel"
@@ -46,7 +46,7 @@ import Layout from "@/layout/default.astro";
     />
   </div>
 
-  <h2 class="mb-8 mt-16 text-3xl font-black text-gray-900">Frankreich</h2>
+  <h2 class="h2 mb-8 mt-16 font-black">Frankreich</h2>
   <div class="grid grid-cols-4 gap-8">
     <Card
       title="Lions Club Altkirch Sundgau"
@@ -65,7 +65,7 @@ import Layout from "@/layout/default.astro";
     />
   </div>
 
-  <h2 class="mb-8 mt-16 text-3xl font-black text-gray-900">Deutschland</h2>
+  <h2 class="h2 mb-8 mt-16 font-black">Deutschland</h2>
   <div class="grid grid-cols-4 gap-8">
     <Card
       title="Lions Club Bad Säckingen"
