--- a/src/pages/datenschutz.astro
+++ b/src/pages/datenschutz.astro
@@ -18,9 +18,7 @@ import Layout from "@/layout/default.astro";
       Definitionen im Art. 4 der Datenschutzgrundverordnung (DSGVO).
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      1. Verantwortlicher
-    </h2>
+    <h2 class="h3 mb-2 mt-8">1. Verantwortlicher</h2>
 
     <p>
       Andreas Remdt<br />Neudorfer Straße 40<br />79541 D-Lörrach<br /><a
@@ -32,10 +30,8 @@ import Layout from "@/layout/default.astro";
       >
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      2. Allgemeines zur Datenverarbeitung
-    </h2>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
+    <h2 class="h3 mb-2 mt-8">2. Allgemeines zur Datenverarbeitung</h2>
+    <h3 class="h4 mb-2 mt-4">
       1. Umfang der Verarbeitung personenbezogener Daten
     </h3>
     <p>
@@ -48,7 +44,7 @@ import Layout from "@/layout/default.astro";
       nicht möglich ist und die Verarbeitung der Daten durch gesetzliche
       Vorschriften gestattet ist.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
+    <h3 class="h4 mb-2 mt-4">
       9. Rechtsgrundlage für die Verarbeitung personenbezogener Daten
     </h3>
     <p>
@@ -70,9 +66,7 @@ import Layout from "@/layout/default.astro";
       und Grundfreiheiten des Betroffenen das erstgenannte Interesse nicht, so dient
       Art. 6 Abs. 1 lit. f DSGVO als Rechtsgrundlage für die Verarbeitung.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      10. Datenlöschung und Speicherdauer
-    </h3>
+    <h3 class="h4 mb-2 mt-4">10. Datenlöschung und Speicherdauer</h3>
     <p>
       Die personenbezogenen Daten der betroffenen Person werden gelöscht oder
       gesperrt, sobald der Zweck der Speicherung entfällt. Eine Speicherung kann
@@ -84,10 +78,10 @@ import Layout from "@/layout/default.astro";
       eine Erforderlichkeit zur weiteren Speicherung der Daten für einen
       Vertragsabschluss oder eine Vertragserfüllung besteht.
     </p>
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
+    <h2 class="h3 mb-2 mt-8">
       3. Bereitstellung der Webseite und Erstellung von Logfiles
     </h2>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
+    <h3 class="h4 mb-2 mt-4">
       1. Beschreibung und Umfang der Datenverarbeitung
     </h3>
     <p>
@@ -112,44 +106,34 @@ import Layout from "@/layout/default.astro";
       >, in welcher sich weitere Informationen zu den eventuell gesammelten
       Daten befinden.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      11. Rechtsgrundlage für die Datenverarbeitung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">11. Rechtsgrundlage für die Datenverarbeitung</h3>
     <p>
       Rechtsgrundlage für die vorübergehende Speicherung der Daten ist Art. 6
       Abs. 1 lit. f DSGVO.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      12. Zweck der Datenverarbeitung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">12. Zweck der Datenverarbeitung</h3>
     <p>
       Die vorübergehende Speicherung der IP-Adresse durch das System ist
       notwendig, um eine Auslieferung der Website an den Rechner des Nutzers zu
       ermöglichen. Hierfür muss die IP-Adresse des Nutzers für die Dauer der
       Sitzung gespeichert bleiben.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      13. Dauer der Speicherung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">13. Dauer der Speicherung</h3>
     <p>
       Die Daten werden gelöscht, sobald sie für die Erreichung des Zweckes ihrer
       Erhebung nicht mehr erforderlich sind. Im Falle der Erfassung der Daten
       zur Bereitstellung der Website ist dies der Fall, wenn die jeweilige
       Sitzung beendet ist.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      14. Widerspruchs- und Beseitigungsmöglichkeit
-    </h3>
+    <h3 class="h4 mb-2 mt-4">14. Widerspruchs- und Beseitigungsmöglichkeit</h3>
     <p>
       Die Erfassung der Daten zur Bereitstellung der Website und die Speicherung
       der Daten in Logfiles ist für den Betrieb der Internetseite zwingend
       erforderlich. Es besteht folglich seitens des Nutzers keine
       Widerspruchsmöglichkeit.
     </p>
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      4. Kontaktformular und E-Mail-Kontakt
-    </h2>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
+    <h2 class="h3 mb-2 mt-8">4. Kontaktformular und E-Mail-Kontakt</h2>
+    <h3 class="h4 mb-2 mt-4">
       1. Beschreibung und Umfang der Datenverarbeitung
     </h3>
     <p>
@@ -182,9 +166,7 @@ import Layout from "@/layout/default.astro";
       Die Daten werden ausschließlich für die Verarbeitung der Konversation
       verwendet.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      23. Rechtsgrundlage für die Datenverarbeitung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">23. Rechtsgrundlage für die Datenverarbeitung</h3>
     <p>
       Rechtsgrundlage für die Verarbeitung der Daten ist bei Vorliegen einer
       Einwilligung des Nutzers Art. 6 Abs. 1 lit. a DSGVO.
@@ -196,9 +178,7 @@ import Layout from "@/layout/default.astro";
       ist zusätzliche Rechtsgrundlage für die Verarbeitung Art. 6 Abs. 1 lit. b
       DSGVO.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      24. Zweck der Datenverarbeitung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">24. Zweck der Datenverarbeitung</h3>
     <p>
       Die Verarbeitung der personenbezogenen Daten aus der Eingabemaske dient
       uns allein zur Bearbeitung der Kontaktaufnahme. Im Falle einer
@@ -208,9 +188,7 @@ import Layout from "@/layout/default.astro";
       dienen dazu, einen Missbrauch des Kontaktformulars zu verhindern und die Sicherheit
       unserer informationstechnischen Systeme sicherzustellen.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      25. Dauer der Speicherung
-    </h3>
+    <h3 class="h4 mb-2 mt-4">25. Dauer der Speicherung</h3>
     <p>
       Die Daten werden gelöscht, sobald sie für die Erreichung des Zweckes ihrer
       Erhebung nicht mehr erforderlich sind. Für die personenbezogenen Daten aus
@@ -224,9 +202,7 @@ import Layout from "@/layout/default.astro";
       Die während des Absendevorgangs zusätzlich erhobenen personenbezogenen
       Daten werden spätestens nach einer Frist von sieben Tagen gelöscht.
     </p>
-    <h3 class="mb-2 mt-4 text-xl font-bold text-gray-900">
-      26. Widerspruchs- und Beseitigungsmöglichkeit
-    </h3>
+    <h3 class="h4 mb-2 mt-4">26. Widerspruchs- und Beseitigungsmöglichkeit</h3>
     <p>
       Der Nutzer hat jederzeit die Möglichkeit, seine Einwilligung zur
       Verarbeitung der personenbezogenen Daten zu widerrufen. Nimmt der Nutzer
