--- a/src/pages/impressum.astro
+++ b/src/pages/impressum.astro
@@ -11,7 +11,7 @@ import Layout from "@/layout/default.astro";
   </Hero>
 
   <div class="w-2/3">
-    <h2 class="mb-2 text-2xl font-bold text-gray-900">
+    <h2 class="h3 mb-2">
       Programmierung & inhaltlich Verantwortlicher gemäß § 6 MDStV
     </h2>
 
@@ -25,9 +25,7 @@ import Layout from "@/layout/default.astro";
       >
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      1. Inhalt des Onlineangebotes
-    </h2>
+    <h2 class="h3 mb-2 mt-8">1. Inhalt des Onlineangebotes</h2>
     <p>
       Der Autor übernimmt keinerlei Gewähr für die Aktualität, Korrektheit,
       Vollständigkeit oder Qualität der bereitgestellten Informationen.
@@ -43,9 +41,7 @@ import Layout from "@/layout/default.astro";
       oder endgültig einzustellen.
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      2. Verweise und Links
-    </h2>
+    <h2 class="h3 mb-2 mt-8">2. Verweise und Links</h2>
     <p>
       Bei direkten oder indirekten Verweisen auf fremde Internetseiten
       ("Links"), die außerhalb des Verantwortungsbereiches des Autors liegen,
@@ -68,9 +64,7 @@ import Layout from "@/layout/default.astro";
       Links auf die jeweilige Veröffentlichung lediglich verweist.
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
-      3. Urheber- und Kennzeichenrecht
-    </h2>
+    <h2 class="h3 mb-2 mt-8">3. Urheber- und Kennzeichenrecht</h2>
     <p>
       Der Autor ist bestrebt, in allen Publikationen die Urheberrechte der
       verwendeten Grafiken, Tondokumente, Videosequenzen und Texte zu beachten,
@@ -89,7 +83,7 @@ import Layout from "@/layout/default.astro";
       nicht gestattet.
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">4. Datenschutz</h2>
+    <h2 class="h3 mb-2 mt-8">4. Datenschutz</h2>
     <p>
       Sofern innerhalb des Internetangebotes die Möglichkeit zur Eingabe
       persönlicher oder geschäftlicher Daten (E-Mail-Adressen, Namen,
@@ -97,7 +91,7 @@ import Layout from "@/layout/default.astro";
       Nutzers auf ausdrücklich freiwilliger Basis.
     </p>
 
-    <h2 class="mb-2 mt-8 text-2xl font-bold text-gray-900">
+    <h2 class="h3 mb-2 mt-8">
       5. Rechtswirksamkeit dieses Haftungsausschlusses
     </h2>
     <p>
