--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -27,7 +27,7 @@ const { title, date, imageUrl, href } = Astro.props;
         </time>
       ) : null
     }
-    <h3 class="text-xl font-bold">
+    <h3 class="h4">
       <a href={href} class="text-white after:absolute after:inset-0">{title}</a>
     </h3>
   </div>
