--- a/src/components/hero.astro
+++ b/src/components/hero.astro
@@ -7,6 +7,6 @@ const { title } = Astro.props;
 ---
 
 <header class="py-8">
-  <h1 class="mb-8 text-5xl font-black text-gray-900">{title}</h1>
+  <h1 class="h1 mb-8">{title}</h1>
   <p class="mb-12 w-1/2 text-xl"><slot /></p>
 </header>
