--- a/src/layout/default.astro
+++ b/src/layout/default.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "@/components/header.astro";
 import Footer from "@/components/footer.astro";
+import "@/styles/base.css";
 ---
 
 <html lang="en">
