--- a/src/pages/kontakt.astro
+++ b/src/pages/kontakt.astro
@@ -15,79 +15,58 @@ import Layout from "@/layout/default.astro";
     <form action="" method="post" class="w-2/3">
       <div class="mb-8 flex gap-8">
         <div class="w-1/2">
-          <label for="firstname" class="mb-1 block font-medium text-gray-900"
-            >Vorname</label
-          >
+          <label for="firstname" class="label">Vorname</label>
           <input
             type="text"
             id="firstname"
             name="firstname"
             required
-            class="h-12 w-full rounded-md border border-gray-300 px-4"
+            class="textbox"
           />
         </div>
 
         <div class="w-1/2">
-          <label for="lastname" class="mb-1 block font-medium text-gray-900"
-            >Nachname</label
-          >
+          <label for="lastname" class="label">Nachname</label>
           <input
             type="text"
             id="lastname"
             name="lastname"
             required
-            class="h-12 w-full rounded-md border border-gray-300 px-4"
+            class="textbox"
           />
         </div>
       </div>
 
       <div class="mb-8 flex gap-x-8">
         <div class="w-1/2">
-          <label for="email" class="mb-1 block font-medium text-gray-900"
-            >E-Mail</label
-          >
+          <label for="email" class="label">E-Mail</label>
           <input
             type="email"
             id="email"
             name="email"
             required
-            class="h-12 w-full rounded-md border border-gray-300 px-4"
+            class="textbox"
           />
         </div>
         <div class="w-1/2">
-          <label
-            for="phone"
-            class="mb-1 flex items-center font-medium text-gray-900"
+          <label for="phone" class="label flex items-center"
             >Telefonnummer <span
               class="ml-auto text-xs font-normal uppercase text-gray-500"
               >optional</span
             ></label
           >
-          <input
-            type="text"
-            id="phone"
-            name="phone"
-            class="h-12 w-full rounded-md border border-gray-300 px-4"
-          />
+          <input type="text" id="phone" name="phone" class="textbox" />
         </div>
       </div>
 
-      <label for="message" class="mb-1 block font-medium text-gray-900"
-        >Ihre Nachricht</label
-      >
+      <label for="message" class="label">Ihre Nachricht</label>
       <textarea
         name="message"
         id="message"
         required
-        class="mb-8 h-32 w-full resize-y rounded-md border border-gray-300 px-4 py-2"
-      ></textarea>
+        class="textbox mb-8 h-32 resize-y px-4 py-2"></textarea>
 
-      <button
-        type="submit"
-        class="inline-block h-12 rounded-md bg-gray-900 px-6 font-medium text-white"
-      >
-        Nachricht senden
-      </button>
+      <button type="submit" class="btn btn-primary">Nachricht senden</button>
     </form>
 
     <div role="alert" class="mt-7 w-1/3">
@@ -106,9 +85,7 @@ import Layout from "@/layout/default.astro";
           d="M9 12.75 11.25 15 15 9.75M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z"
         ></path>
       </svg>
-      <h2 class="mb-4 text-2xl font-bold text-gray-900">
-        Vielen Dank für Ihre Nachricht!
-      </h2>
+      <h2 class="h3 mb-4">Vielen Dank für Ihre Nachricht!</h2>
       <p>
         Ihre Nachricht wurde erfolgreich an uns gesendet. Wir werden uns
         demnächst bei Ihnen melden.
