feat: tweak hero section, image styles

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,18 +15,53 @@ import Layout from "@/layout/default.astro";
       wie z. B. den 3-Länderlauf oder einen Stand bei "Em Bebbi sy Jazz!" in
       Basel, zu organisieren.
     </p>
-    <div>
-      <a href="/news" class="btn btn-primary"
-        >Unsere letzten Aktivitäten &rarr;</a
-      >
+    <a href="/news" class="btn btn-primary">
+      Unsere letzten Aktivitäten &rarr;
+    </a>
+
+    <div class="absolute right-0 top-12 flex w-2/5 gap-8">
+      <div class="pt-72">
+        <img
+          src="https://placehold.co/200x350"
+          class="rounded-xl shadow-lg"
+          alt="placeholder image for later purposes"
+          width="200"
+          height="350"
+        />
+      </div>
+      <div class="pt-40">
+        <img
+          src="https://placehold.co/200x350"
+          class="mb-8 rounded-xl shadow-lg"
+          alt="placeholder image for later purposes"
+          width="200"
+          height="350"
+        />
+        <img
+          src="https://placehold.co/200x350"
+          class="rounded-xl shadow-lg"
+          alt="placeholder image for later purposes"
+          width="200"
+          height="350"
+        />
+      </div>
+      <div>
+        <img
+          src="https://placehold.co/200x350"
+          class="mb-8 rounded-xl shadow-lg"
+          alt="placeholder image for later purposes"
+          width="200"
+          height="350"
+        />
+        <img
+          src="https://placehold.co/200x350"
+          class="rounded-xl shadow-lg"
+          alt="placeholder image for later purposes"
+          width="200"
+          height="350"
+        />
+      </div>
     </div>
-    <img
-      src="https://placehold.co/500x450"
-      class="absolute right-0 top-0 w-2/5 translate-y-1/2 rounded-xl"
-      alt="placeholder image for later purposes"
-      width="500"
-      height="450"
-    />
   </section>
 
   <section class="py-48">
@@ -79,7 +114,7 @@ import Layout from "@/layout/default.astro";
     alt="placeholder image for later purposes"
     width="1200"
     height="450"
-    class="w-full rounded-xl"
+    class="w-full rounded-xl shadow-lg"
   />
 
   <section class="py-48">
@@ -171,7 +206,7 @@ import Layout from "@/layout/default.astro";
         alt="placeholder image for later purposes"
         width="500"
         height="600"
-        class="rounded-xl"
+        class="rounded-xl shadow-lg"
       />
     </div>
 
