--- a/src/pages/news/[...slug].astro
+++ b/src/pages/news/[...slug].astro
@@ -26,7 +26,7 @@ export function getStaticPaths() {
         alt="placeholder image for later purposes"
         width="1000"
         height="600"
-        class="mb-4 w-full rounded-xl"
+        class="mb-4 w-full rounded-xl shadow-lg"
       />
       <figcaption class="flex">
         <svg
@@ -69,7 +69,7 @@ export function getStaticPaths() {
         alt="placeholder image for later purposes"
         width="500"
         height="300"
-        class="w-full rounded-xl"
+        class="w-full rounded-xl shadow-lg"
       />
     </figure>
 
@@ -110,43 +110,43 @@ export function getStaticPaths() {
 
     <figure class="mt-12 grid grid-cols-3 gap-8">
       <img
-        src="https://placehold.co/500x300"
+        src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
         width="500"
-        height="300"
-        class="rounded-xl"
+        height="400"
+        class="rounded-xl shadow-lg"
       />
 
       <img
-        src="https://placehold.co/500x300"
+        src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
         width="500"
-        height="300"
-        class="rounded-xl"
+        height="400"
+        class="rounded-xl shadow-lg"
       />
 
       <img
-        src="https://placehold.co/500x300"
+        src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
         width="500"
-        height="300"
-        class="rounded-xl"
+        height="400"
+        class="rounded-xl shadow-lg"
       />
 
       <img
-        src="https://placehold.co/500x300"
+        src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
         width="500"
-        height="300"
-        class="rounded-xl"
+        height="400"
+        class="rounded-xl shadow-lg"
       />
 
       <img
-        src="https://placehold.co/500x300"
+        src="https://placehold.co/500x400"
         alt="placeholder image for later purposes"
         width="500"
-        height="300"
-        class="rounded-xl"
+        height="400"
+        class="rounded-xl shadow-lg"
       />
     </figure>
   </div>
