--- a/src/components/card.astro
+++ b/src/components/card.astro
@@ -10,7 +10,7 @@ const { title, date, imageUrl, href } = Astro.props;
 ---
 
 <article
-  class="relative overflow-hidden after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
+  class="relative overflow-hidden shadow-lg after:absolute after:inset-0 after:z-0 after:rounded-xl after:bg-gradient-to-b after:from-transparent after:to-gray-900/50"
 >
   <img
     src={imageUrl}
