--- a/src/components/news-preview.astro
+++ b/src/components/news-preview.astro
@@ -16,7 +16,7 @@ const { title, date, imageUrl, excerpt, href } = Astro.props;
     alt="placeholder image for later purposes"
     width="250"
     height="250"
-    class="rounded-xl"
+    class="rounded-xl shadow-lg"
   />
   <div class="flex flex-col justify-center">
     <time datetime="">{date}</time>
