--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -1,4 +1,6 @@
-<header class="mx-auto flex max-w-7xl items-center justify-between px-8 py-8">
+<header
+  class="relative mx-auto flex max-w-7xl items-center justify-between px-8 py-8 before:absolute before:-top-1/2 before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-48 before:rounded-full before:bg-purple-100 before:blur-3xl"
+>
   <img
     src="https://placehold.co/200x75"
     alt="logo der region lions"
