--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,9 @@ import Layout from "@/layout/default.astro";
 ---
 
 <Layout>
-  <section class="relative py-32">
+  <section
+    class="relative py-32 before:absolute before:bottom-32 before:right-0 before:-z-10 before:aspect-square before:w-64 before:rounded-full before:bg-fuchsia-100 before:blur-3xl after:absolute after:-bottom-48 after:right-32 after:-z-10 after:aspect-square after:w-72 after:rounded-full after:bg-purple-100 after:blur-3xl"
+  >
     <h1 class="h1 mb-8 w-3/5">
       Länderübergreifendes Engagement für Deutschland, Frankreich und die
       Schweiz
