--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -38,4 +38,16 @@
   .h4 {
     @apply text-xl font-bold leading-tight text-gray-900;
   }
+
+  .bg-test::after {
+    content: "";
+    position: absolute;
+    width: 200px;
+    aspect-ratio: 1;
+    background-color: red;
+    border-radius: 50%;
+    filter: blur(100px);
+    z-index: -10;
+    opacity: 0.5;
+  }
 }
